# LibraCore

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
auth/: AuthManager.cpp  AuthManager.h
database/: DatabaseManager.h
models/: Book.cpp  Book.h  Learner.cpp  Learner.h  PaymentItem.cpp  PaymentItem.h  Payments.cpp  Payments.h  Transaction.cpp  Transaction.h  User.cpp  User.h
themes/: dark.qss
ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
utils/: Encryption.cpp  Encryption.h
